compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_could_not_unify12.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 793
expression: "\n        pub type Person {\n            Person(name: String, age: Int)\n        }\n\n        pub fn create_person(age: Float) {\n            let x: Person = Person(name: \"Quinn\", age: age)\n            x\n        }"
snapshot_kind: text
---
----- SOURCE CODE

        pub type Person {
            Person(name: String, age: Int)
        }

        pub fn create_person(age: Float) {
            let x: Person = Person(name: "Quinn", age: age)
            x
        }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:7:56
  │
7 │             let x: Person = Person(name: "Quinn", age: age)
  │                                                        ^^^

Expected type:

    Int

Found type:

    Float
